Added About Me section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <body>
 <h1>Welcome to My Diary</h1>
 <p>Hey,i'm ammu and i like coding,teaching,and spending with frds</p>
+<h2>About Me</h2>
+<ul>
+<li>Love teaching students</li>
+<li>Addicted to water</li>
+<li>like to spend time wid my daughter</li>
+</ul>
 </body>
 </html>
 
